    updates to control, rules only.  Need to update example-files and
    documentation-files.
    - Fixes Boost ticket 4631.  Closes: #595955.
    - Program.Options updated.  Closes: #593522.
  
  * control:
  * rules: Set versions to 1.46.  Remove obsolete conflicts.

  * rules: Don't use "long double" for architecture "armhf".  
    Closes: #604107.
  
 -- Steve M. Robbins <smr@debian.org>  Sun, 20 Feb 2011 21:38:07 -0600

boost1.45 (1.45.0-1) experimental; urgency=low

  * New upstream.
    - patches/kfreebsd-jam.patch: Remove.  Applied upstream.
    - patches/boost-build-pythonid.patch: Remove.  Applied upstream.

  * control:
  * rules:
  * documentation-files:
  * example-files: Updates for new version.
  
 -- Steve M. Robbins <smr@debian.org>  Tue, 14 Dec 2010 00:58:11 -0600

boost1.44 (1.44.0-2) experimental; urgency=low

  * rules, control: Build Python extensions for Python 3 in addition to
    Python 2.

  * patches/boost-1.44-py3.1.patch: New.  Fix Boost.MPI build failure for
    Python 3 (thanks, Andreas Kloeckner).  Closes: #595786.

 -- Steve M. Robbins <smr@debian.org>  Sat, 18 Sep 2010 12:03:46 -0500

boost1.44 (1.44.0-1) experimental; urgency=low

  * New upstream.  Closes: #582690, #594634.
    - patches/boost-build-pythonid.patch: Modify.  Partially applied upstream.
    - patches/lambda-include-deps.patch: Remove.  Applied upstream.
    - patches/kfreebsd-thread.patch: Refresh.
    - patches/jam-wall-clean.patch: Remove temporarily.
  
  * rules: The python build ID now specified using --python-buildid.

  * patches/remove-rpath.patch: New.  Disable rpath-setting code.
  
 -- Steve M. Robbins <smr@debian.org>  Sat, 11 Sep 2010 22:24:43 -0500

boost1.42 (1.42.0-4) unstable; urgency=low

  * rules: Copy "doc" directories to $htmldir with --parents option so
    that they end up in the right place.  Closes: #586578.
  
  * patches/lambda-include-deps.patch: New.  Adapted from upstream
    changeset 61881.  Closes: #581706.
  