@@ -12,6 +12,9 @@ boost1.46 (1.46.0-1) UNRELEASED; urgency=low
   * rules: Don't use "long double" for architecture "armhf".  
     Closes: #604107.
   
+  * control:
+  * rules: New packages for Boost.Random.  Closes: #610821.
+  
  -- Steve M. Robbins <smr@debian.org>  Sun, 20 Feb 2011 21:38:07 -0600
 
 boost1.45 (1.45.0-1) experimental; urgency=low
